--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "react-calendar": "^4.6.1",
     "react-datepicker": "^4.24.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^4.12.0"
+    "react-icons": "^4.12.0",
+    "react-redux": "^9.0.2",
+    "react-router-dom": "^6.20.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
