--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.0.1",
+    "DatePicker": "^2.0.0",
     "firebase": "^10.7.1",
     "react": "^18.2.0",
     "react-calendar": "^4.6.1",
